src/unit_tests/Custom/type_checker/fail/self3.cl
class Main {
    obj : SELF_TYPE <- new C;

    main(): Int {1};
};

class C inherits Main {

};